Spacing at the bottom of widgets, fixes DT-782 DT-783 DT-784

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -228,6 +228,10 @@ a {
 	float: right;
 }
 
+.widget {
+	margin-bottom: 20px;
+}
+
 /* ===============================
    2. NAVIGATION
    =============================== */
